--- a/index.html
+++ b/index.html
@@ -806,7 +806,59 @@ mg/dL (US standard) an vice versa using blood sugar converter.<br><br><br> There
 </div>
 </div>
 <br><br>
-  <?php include 'footer.php'; ?>
+  <footer class="mt-auto py-3 bg-light">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-md">
+        <!-- <img class="mb-2" src="../assets/brand/bootstrap-logo.svg" alt="" width="24" height="19"> -->
+        <!--
+        <span class="text-muted">BLOOD SUGAR CONVERTER</span>
+        <small class="d-block mb-3 text-muted"><span class="text-muted"> GetBusyCoding &copy; <?php //echo date("Y"); ?></span></small>
+        -->
+      </div>
+      <div class="col-6 col-md">
+        <h5>Contact Info.</h5>
+        <ul class="list-unstyled text-small">
+          <li><i class="fa fa-phone"></i> <a class="text-muted" href="tel:+2347045574466">07045576644</a></li>
+          <li><i class="fa fa-whatsapp"></i> <a class="text-muted" href="https://wa.me/2348138809708?text=Hi%20I'm%20Dave,%20thanks%20for%20contacting%20me!%20Please%20let%20 me%20know%20how%20i%20can%20help%20you.">Send a message</a></li>
+          <li><i class="fa fa-facebook"></i> <a class="link-secondary" href="https://facebook.com/dave.enyi.7">facebook</a></li>
+          <li><i class="fa fa-instagram"></i> <a class="text-muted" href="https://instagram.com/i_am_dave_sleek">Instagram</a></li>
+          <li><i class="fa fa-twitter"></i> <a class="text-muted" href="https://twitter.com/davey_sleek">Twitter</a></li>
+          <li><i class="fa fa-linkedin"></i> <a class="text-muted" href="https://linkedin.com/in/dave-enyi-631aa2109">LinkedIn</a></li>
+          <li><i class="fa fa-github"></i> <a class="text-muted" href="https://github.com/Dave-Sleek">Github</a></li>
+        </ul>
+      </div>
+      <!-- <div class="col-6 col-md">
+        <h5>Resources</h5>
+        <ul class="list-unstyled text-small">
+          <li><a class="link-secondary" href="#">Resource</a></li>
+          <li><a class="link-secondary" href="#">Resource name</a></li>
+          <li><a class="link-secondary" href="#">Another resource</a></li>
+          <li><a class="link-secondary" href="#">Final resource</a></li>
+        </ul>
+      </div> -->
+      <div class="col-6 col-md">
+        <h5>About</h5>
+        <ul class="list-unstyled text-small">
+          <li><a class="link-secondary" href="#">Team</a></li>
+          <li><a class="link-secondary" href="#">Locations</a></li>
+          <li><a class="link-secondary" href="#">Privacy</a></li>
+          <li><a class="link-secondary" href="#">Terms</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="col-12 col-md" align="center">
+        <!-- <img class="mb-2" src="../assets/brand/bootstrap-logo.svg" alt="" width="24" height="19"> -->
+        <span class="text-muted">BLOOD SUGAR CONVERTER</span>
+        <small class="d-block mb-3 text-muted"><span class="text-muted">Powered By: GetBusyCoding</span> &copy; <span class="card-text" id="yr"></span></small>
+      </div>
+  </div>
+  </footer>
+<script type="text/javascript">
+    	let year = new Date();
+    	document.getElementById("yr").innerHTML = year.getFullYear();
+    </script>
+
   <script type="text/javascript">
    var month = new Date();
    document.getElementById("mont").innerHTML = month.getMonth() + 1;
