--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <span class="card-text" id="days" align="center"></span> -&nbsp;
 <span class="card-text" id="dat"> </span> -&nbsp;
 <span class="card-text" id="mont"> </span> -&nbsp;
-<span class="card-text" id="mont"> <?php echo date("Y"); ?> </span> 
+<span class="card-text" id="mont"></span> -&nbsp; <span class="card-text" id="yr"></span>
 <span class="card-text" style="text-align: center;"><script src="assets/dist/js/greetings.js"></script></span>
 </center>
 <hr><br>
